// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scanner scan combinations of simple symbols 1`] = `
Array [
  Object {
    "end": 1,
    "lexeme": "{",
    "literal": undefined,
    "loc": Object {
      "end": Object {
        "column": 0,
        "line": 1,
      },
      "start": Object {
        "column": -1,
        "line": 1,
      },
    },
    "start": 0,
    "type": "LEFT_BRACE",
  },
  Object {
    "end": 2,
    "lexeme": "}",
    "literal": undefined,
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 1,
      },
      "start": Object {
        "column": 0,
        "line": 1,
      },
    },
    "start": 1,
    "type": "RIGHT_BRACE",
  },
  Object {
    "end": 2,
    "lexeme": "",
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 1,
      },
      "start": Object {
        "column": 1,
        "line": 1,
      },
    },
    "start": 1,
    "type": "EOF",
  },
]
`;

exports[`Scanner scan combinations of simple symbols 2`] = `
Array [
  Object {
    "end": 1,
    "lexeme": "[",
    "literal": undefined,
    "loc": Object {
      "end": Object {
        "column": 0,
        "line": 1,
      },
      "start": Object {
        "column": -1,
        "line": 1,
      },
    },
    "start": 0,
    "type": "LEFT_BRACKET",
  },
  Object {
    "end": 2,
    "lexeme": "]",
    "literal": undefined,
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 1,
      },
      "start": Object {
        "column": 0,
        "line": 1,
      },
    },
    "start": 1,
    "type": "RIGHT_BRACKET",
  },
  Object {
    "end": 2,
    "lexeme": "",
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 1,
      },
      "start": Object {
        "column": 1,
        "line": 1,
      },
    },
    "start": 1,
    "type": "EOF",
  },
]
`;

exports[`Scanner scan comments 1`] = `
Array [
  Object {
    "end": 11,
    "lexeme": "//comment1",
    "literal": "comment1",
    "loc": Object {
      "end": Object {
        "column": 0,
        "line": 3,
      },
      "start": Object {
        "column": 0,
        "line": 2,
      },
    },
    "start": 1,
    "type": "COMMENT",
  },
  Object {
    "end": 23,
    "lexeme": "// comment2",
    "literal": " comment2",
    "loc": Object {
      "end": Object {
        "column": NaN,
        "line": 22,
      },
      "start": Object {
        "column": 1,
        "line": 3,
      },
    },
    "start": 12,
    "type": "COMMENT",
  },
  Object {
    "end": 24,
    "lexeme": "",
    "loc": Object {
      "end": Object {
        "column": 2,
        "line": 4,
      },
      "start": Object {
        "column": 2,
        "line": 4,
      },
    },
    "start": 23,
    "type": "EOF",
  },
]
`;

exports[`Scanner scan comments 2`] = `
Array [
  Object {
    "end": 32,
    "lexeme": "/**
 * comment1
 * comment2
 */",
    "literal": "*
 * comment1
 * comment2
 ",
    "loc": Object {
      "end": Object {
        "column": NaN,
        "line": 29,
      },
      "start": Object {
        "column": 0,
        "line": 2,
      },
    },
    "start": 1,
    "type": "COMMENT",
  },
  Object {
    "end": 41,
    "lexeme": "",
    "loc": Object {
      "end": Object {
        "column": 12,
        "line": 3,
      },
      "start": Object {
        "column": 12,
        "line": 3,
      },
    },
    "start": 40,
    "type": "EOF",
  },
]
`;

exports[`Scanner scan identifiers 1`] = `
Array [
  Object {
    "end": 4,
    "lexeme": "foo",
    "literal": "foo",
    "loc": Object {
      "end": Object {
        "column": 0,
        "line": 3,
      },
      "start": Object {
        "column": 0,
        "line": 2,
      },
    },
    "start": 1,
    "type": "IDENTIFIER",
  },
  Object {
    "end": 8,
    "lexeme": "bar",
    "literal": "bar",
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 4,
      },
      "start": Object {
        "column": 1,
        "line": 3,
      },
    },
    "start": 5,
    "type": "IDENTIFIER",
  },
  Object {
    "end": 13,
    "lexeme": "_foo",
    "literal": "_foo",
    "loc": Object {
      "end": Object {
        "column": 2,
        "line": 5,
      },
      "start": Object {
        "column": 2,
        "line": 4,
      },
    },
    "start": 9,
    "type": "IDENTIFIER",
  },
  Object {
    "end": 21,
    "lexeme": "package",
    "literal": "package",
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 5,
      },
      "start": Object {
        "column": 3,
        "line": 5,
      },
    },
    "start": 14,
    "type": "IDENTIFIER",
  },
  Object {
    "end": 25,
    "lexeme": "foo",
    "literal": "foo",
    "loc": Object {
      "end": Object {
        "column": 2,
        "line": 6,
      },
      "start": Object {
        "column": NaN,
        "line": 29,
      },
    },
    "start": 22,
    "type": "IDENTIFIER",
  },
  Object {
    "end": 26,
    "lexeme": ";",
    "literal": undefined,
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 6,
      },
      "start": Object {
        "column": 2,
        "line": 6,
      },
    },
    "start": 25,
    "type": "SEMICOLON",
  },
  Object {
    "end": 33,
    "lexeme": "import",
    "literal": "import",
    "loc": Object {
      "end": Object {
        "column": NaN,
        "line": 29,
      },
      "start": Object {
        "column": 4,
        "line": 6,
      },
    },
    "start": 27,
    "type": "IDENTIFIER",
  },
  Object {
    "end": 42,
    "lexeme": "",
    "loc": Object {
      "end": Object {
        "column": 13,
        "line": 7,
      },
      "start": Object {
        "column": 13,
        "line": 7,
      },
    },
    "start": 41,
    "type": "EOF",
  },
]
`;

exports[`Scanner scan numbers 1`] = `
Array [
  Object {
    "end": 3,
    "lexeme": "23",
    "literal": 23,
    "loc": Object {
      "end": Object {
        "column": 0,
        "line": 3,
      },
      "start": Object {
        "column": 0,
        "line": 2,
      },
    },
    "start": 1,
    "type": "NUMBER",
  },
  Object {
    "end": 10,
    "lexeme": "234.35",
    "literal": 234.35,
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 4,
      },
      "start": Object {
        "column": 1,
        "line": 3,
      },
    },
    "start": 4,
    "type": "NUMBER",
  },
  Object {
    "end": 15,
    "lexeme": "0x43",
    "literal": 67,
    "loc": Object {
      "end": Object {
        "column": 2,
        "line": 5,
      },
      "start": Object {
        "column": 2,
        "line": 4,
      },
    },
    "start": 11,
    "type": "NUMBER",
  },
  Object {
    "end": 20,
    "lexeme": "0345",
    "literal": 229,
    "loc": Object {
      "end": Object {
        "column": NaN,
        "line": 20,
      },
      "start": Object {
        "column": NaN,
        "line": 20,
      },
    },
    "start": 16,
    "type": "NUMBER",
  },
  Object {
    "end": 24,
    "lexeme": "1e3",
    "literal": 1000,
    "loc": Object {
      "end": Object {
        "column": NaN,
        "line": 20,
      },
      "start": Object {
        "column": NaN,
        "line": 20,
      },
    },
    "start": 21,
    "type": "NUMBER",
  },
  Object {
    "end": 33,
    "lexeme": "",
    "loc": Object {
      "end": Object {
        "column": 13,
        "line": 7,
      },
      "start": Object {
        "column": 13,
        "line": 7,
      },
    },
    "start": 32,
    "type": "EOF",
  },
]
`;
